--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/ting-client"]
 	path = lib/ting-client
-	url = http://github.com/dingproject/ting-client.git
+	url = git@github.com:reload/ting-client.git
